--- a/gimong/package.json
+++ b/gimong/package.json
@@ -30,11 +30,11 @@
     "firebase-admin": "^13.5.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.542.0",
-    "next": "15.5.2",
+    "next": "^15.5.6",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
+    "react": "^19.1.0",
     "react-day-picker": "^9.10.0",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.63.0",
     "recharts": "^3.2.1",
     "sonner": "^2.0.7",
