--- a/gimong/package.json
+++ b/gimong/package.json
@@ -29,6 +29,7 @@
     "date-fns": "^4.1.0",
     "firebase": "^12.4.0",
     "firebase-admin": "^13.5.0",
+    "framer-motion": "^12.23.24",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.542.0",
     "next": "^15.5.6",
