--- a/gimong/package.json
+++ b/gimong/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "vercel-build": "next build",
+    "postinstall": "next build",
     "start": "next start",
     "lint": "eslint"
   },
+  
   "dependencies": {
     "@google-cloud/firestore": "^7.11.6",
     "@hookform/resolvers": "^5.2.1",
