--- a/gimong/package.json
+++ b/gimong/package.json
@@ -10,7 +10,6 @@
     "start": "next start",
     "lint": "eslint"
   },
-  
   "dependencies": {
     "@google-cloud/firestore": "^7.11.6",
     "@hookform/resolvers": "^5.2.1",
@@ -59,5 +58,8 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
