--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "firebase-admin": "^13.5.0",
     "framer-motion": "^12.23.24",
     "js-cookie": "^3.0.5",
+    "lightningcss": "^1.30.2",
     "lucide-react": "^0.542.0",
     "next": "^15.5.6",
     "next-themes": "^0.4.6",
