--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "appwrite": "^21.2.1",
+    "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "currency.js": "^2.0.4",
@@ -34,6 +35,7 @@
     "lucide-react": "^0.542.0",
     "next": "^15.5.6",
     "next-themes": "^0.4.6",
+    "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-day-picker": "^9.10.0",
     "react-dom": "^19.1.0",
@@ -41,6 +43,7 @@
     "recharts": "^3.2.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.15",
     "uuid": "^13.0.0",
     "vaul": "^1.1.2",
     "zod": "^4.1.5"
@@ -54,7 +57,6 @@
     "@types/recharts": "^1.8.29",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
-    "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
   }
