--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@google-cloud/firestore": "^7.11.6",
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -27,7 +28,6 @@
     "clsx": "^2.1.1",
     "currency.js": "^2.0.4",
     "date-fns": "^4.1.0",
-    "emailjs-com": "^3.2.0",
     "firebase": "^12.4.0",
     "firebase-admin": "^13.5.0",
     "framer-motion": "^12.23.24",
